替换com.sum.BASE64